<resources>
    <string name="app_name">Univoxer</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_next">Next</string>
    <string name="btn_finish">Create</string>
    <string name="sign_with_other">Or Sign with</string>
    <string name="password_incorrect">Wrong password</string>
    <string name="email_not_exist">Email not found</string>
    <string name="password_not_equal">Password is incorrect</string>
    <string name="incorrect_email">Email is incorrect</string>
    <string name="invalid_name">Incorrect name</string>
    <string name="hint_name">Name</string>
    <string name="name_field">Name: </string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="splash_text">Bringing People Together</string>
    <string name="select_language">Select your language</string>
    <string name="buy_credit_text">Buy support time</string>
    <string name="credits_text">Support time: %1$s</string>
    <string name="need_more_credit_text">You need to buy time to request a support!</string>
    <string name="choose_language_text">Select the language to call a translator</string>
    <string name="call_text">Call</string>
    <string name="radio_user_text">User: You can request a translator whenever you wish one.</string>
    <string name="radio_translate_text">Translator: You can request a translator or assist other people if you speak more than one language</string>
    <string name="email_exist">Email already exists</string>
    <string name="translator_unavailable">Interpreter unavailable</string>
    <string name="text_home_selecting_flags">Tap the flags to select the language</string>
    <string name="button_home_to_call">Call the Translator</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="title_from_dialog">From:</string>
    <string name="title_to_dialog">To:</string>
    <string name="status_translator_title">Available to receive calls:</string>
    <string name="status_translator">STATUS:</string>
    <string name="settings_title">Settings</string>
    <string name="profile_title">Profile</string>
    <string name="status_translator_home">Status: %1$s</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="call_status_calling">Calling</string>
    <string name="call_status_connected">Connected</string>
    <string name="get_credits_error">Error to validate your credits on server</string>
    <string name="save_profile_error">Error to save your data</string>
    <string name="online_panel">Open online Panel</string>
    <string name="birth_date">Birthday Date: </string>
    <string name="fail">Fail</string>
    <string name="authenticated">Authenticated</string>
    <string name="date_form">%1$d/%2$d/%3$d</string>
    <string name="config_date_message">We don\'t know your birthday date yet!\nPlease fill in your profile.</string>
    <string name="save_button">Save</string>
    <string name="message_updated">Updated</string>
    <string name="EULA">EULA</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
    <string name="german">German</string>
    <string name="french">French</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="russian">Russian</string>
</resources>