<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp2"
    android:paddingLeft="30dp"
    android:paddingTop="25dp"
    android:paddingRight="30dp"
    android:paddingBottom="20dp">

    <ImageView
        android:id="@+id/img"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_below="@id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/hint_email"/>

    <EditText
        android:layout_below="@id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/hint_password"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_below="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/layout_buttons">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:id="@+id/btn_sign_in"
            android:textColor="@color/white"
            android:background="@drawable/buttonshape"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:id="@+id/btn_sign_up"
            android:textColor="@color/white"
            android:background="@drawable/buttonshape"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>



    <TextView
        android:layout_below="@id/layout_buttons"
        android:id="@+id/text_forgot_password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/white"/>
    <!--
    <View
        android:id="@+id/dot"
        android:layout_width="3dp"
        android:layout_height="3dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:background="@drawable/circleshape"/>

    <ImageView
        android:id="@+id/sign_in_google_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_fb_login"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/dot"/>

    <ImageView
        android:id="@+id/sign_in_fb_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_gmail_login"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/dot"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/dot"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_other_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_with_other"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerInParent="true"
            android:textColor="@color/white"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_toLeftOf="@id/txt_other_login"
            android:layout_centerInParent="true"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_toRightOf="@id/txt_other_login"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    -->

</RelativeLayout>