<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_ic_person"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_person" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_ic_person"
        android:layout_centerHorizontal="true"
        android:text="fulano de tal"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_below="@id/user_name"
        android:background="@color/white"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/img"
        android:layout_centerHorizontal="true"
        android:text="@string/credits_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_base_credit" />

    <TextView
        android:id="@+id/credit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="00h00min"
        android:textColor="@color/text_color_red"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/need_more_credit_text"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:text="@string/buy_credit_text"
        android:textColor="@color/white" />

</RelativeLayout>